# crust_lang

./: Cargo.toml  README.md  demo.tape  demo2.tape  lox.grammar  test.lox
ast/src/: lib.rs  typed.rs  untyped.rs
backend/bytecode/: Cargo.toml
backend/bytecode/src/: chunk.rs  codegen.rs  internal.rs  lib.rs  vm.rs
backend/interpreter/: Cargo.toml
backend/interpreter/src/: ast.rs  crust.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  token.rs
backend/new/: Cargo.toml
backend/new/src/: ast.rs  crust.rs  interpreter.rs  lexer.rs  parser.rs  token.rs
backend/old/: Cargo.toml
backend/old/src/: error.rs  lib.rs  parser.rs  syntax.rs  token.rs
benches/: my_benchmark.rs
compiler/: Cargo.toml  language.txt
compiler/programs/: add.crust
compiler/src/: legacy.rs  llvm.rs  main.rs  parser.rs
crust/: Cargo.toml
crust/benches/: my_benchmark.rs
crust/samples/: fizzbuzz.crust  forloop.crust  function.crust  functional.crust  recursion.crust  scope.crust  something.crust  struct.crust  test.crust
crust/samples/compiler/: for_loop.crust  function_decl.crust  let_statement.crust  return_statement.crust  vm_test.crust
crust/samples/compiler_samples/: let_statement.crust
crust/src/: main.rs
demo/source/: compiler1.tape  compiler_vm_run.tape  demo.tape  demo2.tape  disassemble.tape  error_tracking.tape  recursion.tape
interpreter/: Cargo.toml  factorial.crust  if.crust  test2.lox
interpreter/benches/: my_benchmark.rs
interpreter/src/: main.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs  tests.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  parser.rs
programs/: factorial.crust
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: constants.rs  error.rs  expression.rs  interpreter.rs  lexer.rs  llvm.rs  lox.rs  main.rs  parser.rs  scanner.rs  token.rs
typecheck/: Cargo.toml
typecheck/src/: lib.rs  typechecker.rs  typed.rs  typed_arena.rs
