[package]
name = "crafting_interpreters_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
codespan = "0.11.1"
codespan-reporting = "0.11.1"
once_cell = "1.20.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[lib]
name = "lox"
path = "src/lib.rs"
