[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[dependencies]
interpreter = { path = "../backend/interpreter" }
clap = { version = "4.5.39", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
