[package]
name = "crust"
version = "0.1.0"
edition = "2024"

[dependencies]
interpreter = { path = "../backend/interpreter" }
bytecode = { path = "../backend/bytecode" }
clap = { version = "4.5.39", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
