[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
old = { path = "../backend/old" }
new = { path = "../backend/new" }
string-interner = "0.19.0"
slotmap = "1.0.7"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
